# Wallpin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gmon.out  hyprwall-multi.sh
scripts/: hyprwall-multi.sh  pinterest-feed-scraper.sh  pinterest-wallpin.sh
src/: config.c  config.h  layer_shell.c  layout.c  layout.h  main.c  main_wallpaper.c  utils.c
